<resources>
    <string name="app_name">PhotoAlbum</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_enable_location">Enable FINE location</string>
    <string name="pref_location_enable">Allow app to access fine location (GPS, WiFi)
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_display_location">Photo display location</string>
    <string-array name="pref_display_criteria">
        <item>@string/pref_display_crit_int_storage_label</item>
        <item>@string/pref_display_crit_app_album_storage_label</item>
        <item>@string/pref_display_crit_google_photos_storage_label</item>
    </string-array>
    <string-array name="pref_display_criteria_values">
        <item>@string/pref_display_crit_int_storage_key</item>
        <item>@string/pref_display_crit_app_album_storage_key</item>
        <item>@string/pref_display_crit_google_photos_storage_key</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="error">Could not delete the file!</string>
    <string name="saved_message">Image successfully saved!</string>
    <string name="permission_denied">You need to grant permission for storage before using the app!</string>
    <string name="album_photo_content_description">Album photo</string>
    <string name="btn_save_text">Save</string>
    <string name="btn_edit_text">Edit</string>
    <string name="photo_description_view">Photo description</string>
    <string name="location_switch">location_switch</string>
    <string name="pref_display_crit_int_storage_label">From phone storage</string>
    <string name="pref_display_crit_app_album_storage_label">From app album</string>
    <string name="pref_display_crit_google_photos_storage_label">From your Google photos</string>
    <string name="pref_display_crit_int_storage_key">internal</string>
    <string name="pref_display_crit_app_album_storage_key">album</string>
    <string name="pref_display_crit_google_photos_storage_key">gphotos</string>
    <string name="pref_display_crit" translatable="false">display_crit</string>
    <string name="btn_add_place_text">Add nearby place and location</string>
    <string name="appwidget_text">Favorite photo</string>
    <string name="add_widget">Add widget</string>
    <string name="activity_widget_config">Widget configuration</string>
    <string name="photo_empty_nearby_place_data_view">Nearby place</string>
    <string name="photo_empty_location_data_view">Location</string>
</resources>
