<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/photo_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/album_entry_padding"
        android:textSize="@dimen/text_size_photo_date"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/album_photo_iv"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/album_photo_iv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/album_entry_card_height"
        android:layout_marginTop="@dimen/photo_layout_margin_top"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_photo_content_description"
        android:padding="@dimen/padding_photo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/photo_description_tv"
        app:layout_constraintRight_toLeftOf="@+id/photo_date_tv"
        />

    <TextView
        android:id="@+id/photo_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/album_entry_padding"
        android:textSize="@dimen/text_size_photo_date"
        app:layout_constraintLeft_toRightOf="@id/album_photo_iv"
        app:layout_constraintTop_toBottomOf="@id/photo_name_tv"/>

    <TextView
        android:id="@+id/photo_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/photo_description_view"
        app:layout_constraintTop_toBottomOf="@id/album_photo_iv" />
    <TextView
        android:id="@+id/photo_view_place_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/album_entry_padding"
        android:textStyle="italic"
        android:text="@string/photo_empty_nearby_place_data_view"
        app:layout_constraintTop_toBottomOf="@id/photo_description_tv"/>
    <TextView
        android:id="@+id/photo_view_location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/album_entry_padding"
        android:textStyle="italic"
        android:text="@string/photo_empty_location_data_view"
        app:layout_constraintTop_toBottomOf="@id/photo_view_place_tv"/>
    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/photo_view_location_tv"
        android:text="@string/btn_edit_text"/>

</android.support.constraint.ConstraintLayout>